deployment/01_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: projeto-orquestracao
spec: {}
status: {}
