deployment/04_rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: projeto-orquestracao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - image: rabbitmq:3-management
        name: rabbitmq
        ports:
          - containerPort: 5672
          - containerPort: 15672
        startupProbe:
          exec:
            command:
            - /bin/sh
            - -c 
            - rabbitmq-diagnostics check_port_connectivity | grep -q Successfully
          initialDelaySeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
