deployment/05_redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: projeto-orquestracao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: redis/redis-stack
        name: redis
        ports:
          - containerPort: 6379 
          - containerPort: 8001
        startupProbe:
          exec:
            command:
            - /bin/sh
            - -c 
            - redis-cli ping | grep -q PONG
          initialDelaySeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
        volumeMounts:
          - mountPath: /data
            name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: redis-pvc
