deployment/06_minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: projeto-orquestracao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - image: docker.io/bitnami/minio
        name: minio
        ports:
          - containerPort: 9000
          - containerPort: 9001
        startupProbe:
          exec:
            command:
            - /bin/sh
            - -c 
            - mc alias set myminio http://localhost:9000 "$MINIO_ROOT_USER" "$MINIO_ROOT_PASSWORD"; 
            - mc ping --exit --quiet myminio > /dev/null
          initialDelaySeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
        volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: minio-pvc
