deployment/09_app_preparar_ambiente.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: preparar-ambiente
  name: preparar-ambiente
  namespace: projeto-orquestracao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: preparar-ambiente
  template:
    metadata:
      labels:
        app: preparar-ambiente
    spec:
      containers:
      - image: rfrezende/app-projeto-ada:preparar-ambiente
        imagePullPolicy: Always
        name: preparar-ambiente
        resources:
          limits:
            memory: 50Mi
            cpu: ".1"
