deployment/10_app_producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: producer
  name: producer
  namespace: projeto-orquestracao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      containers:
      - image: rfrezende/app-projeto-ada:producer
        imagePullPolicy: Always
        name: producer
        resources:
          limits:
            memory: 50Mi
            cpu: ".1"
        volumeMounts:
          - name: tz-config
            mountPath: /etc/localtime
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/America/Sao_Paulo
