deployment/11_app_consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: consumer
  name: consumer
  namespace: projeto-orquestracao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
      - image: rfrezende/app-projeto-ada:consumer
        imagePullPolicy: Always
        name: consumer
        resources:
          limits:
            memory: 50Mi
            cpu: ".1"
