deployment/08_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: projeto-orquestracao
  labels:
    app: rabbitmq
spec:
  rules:
  - host: rabbitmq.projeto.ada
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq-service
            port:
              number: 15672
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-ingress
  namespace: projeto-orquestracao
  labels:
    app: redis
spec:
  rules:
  - host: redisprojeto.a.da
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redis-service
            port:
              number: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: projeto-orquestracao
  labels:
    app: minio
spec:
  rules:
  - host: minio.projeto.ada
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-service
            port:
              number: 9000
